dev/crud-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: crud
  name: crud
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: crud
  serviceName: crud
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: crud
      name: crud
    spec:
      containers:
        - image: index.docker.io/crudapp/crud:latest
          imagePullPolicy: Always
          name: crud
          ports:
            - containerPort: 8080
          resources: {}
      imagePullSecrets:
        - name: index-docker-io-imagepullsecret
      restartPolicy: Always
      securityContext: {}
  updateStrategy: {}
status:
  availableReplicas: 0
  replicas: 0
