dev/dotnet5angular-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: dotnet5angular
  name: dotnet5angular
spec:
  replicas: 2
  selector:
    matchLabels:
      move2kube.konveyor.io/service: dotnet5angular
  serviceName: dotnet5angular
  template:
    metadata:
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: dotnet5angular
      name: dotnet5angular
    spec:
      containers:
        - image: index.docker.io/dontnet5angular/dotnet5angular:latest
          imagePullPolicy: Always
          name: dotnet5angular
          ports:
            - containerPort: 5001
            - containerPort: 5000
          resources: {}
      imagePullSecrets:
        - name: index-docker-io-imagepullsecret
      restartPolicy: Always
      securityContext: {}
  updateStrategy: {}
status:
  availableReplicas: 0
  replicas: 0
