dev/crud-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: crud
  name: crud
spec:
  clusterIP: None
  ports:
    - name: port-8080
      port: 8080
      targetPort: 8080
  selector:
    move2kube.konveyor.io/service: crud
  type: ClusterIP
status:
  loadBalancer: {}
