dev/dotnet5angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: dotnet5angular
  name: dotnet5angular
spec:
  clusterIP: None
  ports:
    - name: port-5001
      port: 5001
      targetPort: 5001
    - name: port-5000
      port: 5000
      targetPort: 5000
  selector:
    move2kube.konveyor.io/service: dotnet5angular
  type: ClusterIP
status:
  loadBalancer: {}
